[package]
name = "actix-testing"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "actix-testing"

[dependencies]
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
actix-web = "4"
config = { version = "0.14", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
redis = "0.27.6"
uuid = {version = "1", features = ["v4", "serde"]}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3